# AdGuardDNS-Assistant

./: .eslintrc.json  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.tsx  Theme.tsx  Utils.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: conf.rs  main.rs
src-tauri/src/app/: cmd.rs  mod.rs  tray.rs  window.rs
src/components/: Api.ts  ErrorBoundary.tsx
src/components/Auth/: Auth.css  Auth.tsx  AuthForm.tsx  TwoFactorForm.tsx
src/components/QueryLog/: QueryLog.css  QueryLog.tsx  TestQueryLogData.tsx
src/components/Splashscreen/: Splashscreen.css  Splashscreen.tsx
src/components/Tray/: DeviceIcons.tsx  DeviceList.tsx  Devices.tsx  Header.tsx  Piechart.tsx  StatisticCard.tsx  Statistics.tsx  TestDevices.tsx  Tray.css  Tray.tsx
src/hooks/: UseAuth.ts  UseInterval.ts  useDevices.ts  useStatistics.ts  useStoredToken.ts
