[package]
name = "adguard-dns-client"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
log = { version = "0.4", features = ["std", "serde"] }
reqwest = { version = "0.11", features = ["json"] }
tauri-plugin-positioner = { version = "1.0.4", features = ["system-tray"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3", features = ["devtools", "icon-png", "shell-open", "system-tray"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
