[package]
name = "adguard-dns-assistant"
version = "0.0.0"
description = "AdGuard DNS Assistant"
authors = ["grumaxx <maxgrupper@gmail.com>"]
license = "MIT"
repository = "https://github.com/grumaxxx/AdGuardDNS-Assistant"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
anyhow = "1.0.71"
log = { version = "0.4.17", features = ["std", "serde"] }
reqwest = { version = "0.11", features = ["json"] }
tauri-plugin-positioner = { version = "1.0.4", features = ["system-tray"] }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev", features = ["colored"]  }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3", features = ["devtools", "icon-png", "shell-open", "system-tray"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
